--- a/v1-index.html
+++ b/v1-index.html
@@ -125,15 +125,20 @@
         align:'center',
         shown:1,
         thumbs_container:'.custom-cable-slider-thumbs',
-        thumbs_shown:3,
+        thumbs_shown:6,
         thumbs_orientation:'vertical',
         thumbs_align:'center',
         thumbs_margin:10,
         auto_thumbs:false,
+        auto_play:2000,
         responsive:{ // need a function to get responsive overrides for settings
-            768:{ // if > 768 then apply these settings
+            1500:{ // if > 768 then apply these settings
                 shown:3,
-                thumbs_shown:5
+                thumbs_shown:2
+            },
+            800:{
+                shown:2,
+                thumbs_shown:4
             }
         }
     });
