--- a/v1-index.html
+++ b/v1-index.html
@@ -22,7 +22,7 @@
 
         .custom-cable-slider {
             position:relative;
-            max-width:800px;
+            max-width:1000px;
             margin:0 auto;
         }
 
@@ -111,38 +111,36 @@
 <script type="text/javascript" src="js/cable-slider.js"></script>
 <script type="text/javascript">
     $(window).on('load',function(){
-        $('.custom-cable-slider-slide.hide,.custom-cable-slider-thumb.hide').removeClass('hide');
-        var $custom_cable_slider_slides = $('.custom-cable-slider-slides'),
-                $custom_cable_slider_thumbs = $('.custom-cable-slider-thumbs');
-        for (var i=0; i<100; i++) {
-            //$custom_cable_slider_slides.append('<div class="custom-cable-slider-slide"><img src="images/1_2.jpg"></div>');
-            //$custom_cable_slider_thumbs.append('<div class="custom-cable-slider-thumb"><img src="images/1_2.jpg"></div>');
-        }
-        var custom_cable_slider = new $.CableSlider({
-            container:'.custom-cable-slider-slides',
-            next:'.custom-cable-slider-next',
-            prev:'.custom-cable-slider-prev',
-            margin:10,
-            align:'center',
-            shown:1,
-            thumbs_container:'.custom-cable-slider-thumbs',
-            thumbs_shown:3,
-            thumbs_orientation:'vertical',
-            thumbs_align:'center',
-            thumbs_margin:10,
-            auto_thumbs:false,
-            auto_play:false,
-            responsive:{ // need a function to get responsive overrides for settings
-                1500:{ // if > 768 then apply these settings
-                    shown:3,
-                    thumbs_shown:6
-                },
-                800:{
-                    shown:3,
-                    thumbs_shown:4
+        setTimeout(function(){
+            $('.custom-cable-slider-slide.hide,.custom-cable-slider-thumb.hide').removeClass('hide');
+//console.log("start");
+            var custom_cable_slider = new $.CableSlider({
+                container:'.custom-cable-slider-slides',
+                next:'.custom-cable-slider-next',
+                prev:'.custom-cable-slider-prev',
+                margin:10,
+                //orientation:'vertical',
+                align:'center',
+                shown:1,
+                thumbs_container:'.custom-cable-slider-thumbs',
+                thumbs_shown:3,
+                thumbs_orientation:'vertical',
+                thumbs_align:'center',
+                thumbs_margin:10,
+                auto_thumbs:false,
+                auto_play:false,
+                responsive:{ // need a function to get responsive overrides for settings
+                    1500:{ // if > 768 then apply these settings
+                        shown:3,
+                        thumbs_shown:6
+                    },
+                    800:{
+                        shown:3,
+                        thumbs_shown:4
+                    }
                 }
-            }
-        });
+            });
+        },1000);
     });
 </script>
 </body>
