--- a/v1-index.html
+++ b/v1-index.html
@@ -119,10 +119,10 @@
                 next:'.custom-cable-slider-next',
                 prev:'.custom-cable-slider-prev',
                 margin:10,
-                //orientation:'vertical',
+                orientation:'vertical',
                 align:'center',
                 shown:1,
-                thumbs_container:'.custom-cable-slider-thumbs',
+                //thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
                 thumbs_align:'center',
