new adjust system setup

--- a/v1-index.html
+++ b/v1-index.html
@@ -121,8 +121,8 @@
                 margin:10,
                 orientation:'vertical',
                 align:'center',
-                shown:2,
-                //thumbs_container:'.custom-cable-slider-thumbs',
+                shown:1,
+                thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
                 thumbs_align:'center',
@@ -140,7 +140,7 @@
                     }
                 }
             });
-        },1000);
+        },200);
     });
 </script>
 </body>
