quick commit in progress (bug occurred)

--- a/v1-index.html
+++ b/v1-index.html
@@ -68,8 +68,8 @@
             height:100%;
         }
 
-        .cable-slider-thumb .custom-cable-slider-thumb {
-            height:100%;
+        .cable-slider-thumb {
+            margin-bottom:2%;
         }
 
         .cable-slider-thumb img {
@@ -126,7 +126,7 @@
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
                 thumbs_align:'center',
-                thumbs_margin:10,
+                //thumbs_margin:0,
                 auto_thumbs:false,
                 auto_play:false,
                 responsive:{ // need a function to get responsive overrides for settings
