YEEEEES, percentages now work for margins, vertical sliding concept is now complete, please cry a river

--- a/v1-index.html
+++ b/v1-index.html
@@ -61,15 +61,11 @@
         }
 
         .custom-cable-slider-thumbs {
-            width:24%;
+            width:22%;
             position:absolute;
             top:0;
             left:0;
             height:100%;
-        }
-
-        .cable-slider-thumb {
-            margin-bottom:2%;
         }
 
         .cable-slider-thumb img {
@@ -126,7 +122,7 @@
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
                 thumbs_align:'center',
-                //thumbs_margin:0,
+                thumbs_margin:'14%',
                 auto_thumbs:false,
                 auto_play:false,
                 responsive:{ // need a function to get responsive overrides for settings
