fixed issue with next finding correct items, now fixing prev

--- a/v1-index.html
+++ b/v1-index.html
@@ -115,9 +115,9 @@
                 next:'.custom-cable-slider-next',
                 prev:'.custom-cable-slider-prev',
                 margin:10,
-                orientation:'vertical',
+                //orientation:'vertical',
                 align:'center',
-                shown:1,
+                shown:3,
                 thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
