--- a/v1-index.html
+++ b/v1-index.html
@@ -89,15 +89,15 @@
             <div class="custom-cable-slider-thumb hide"><img src="images/1_1.jpg"></div>
             <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-thumb hide"><img src="images/1_3.jpg"></div>
-            <!--<div class="custom-cable-slider-thumb hide"><img src="images/1_4.jpg"></div>
-            <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>-->
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_4.jpg"></div>
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
         </div>
         <div class="custom-cable-slider-slides">
             <div class="custom-cable-slider-slide"><img src="images/1_1.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_3.jpg"></div>
-            <!--<div class="custom-cable-slider-slide hide"><img src="images/1_4.jpg"></div>
-            <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>-->
+            <div class="custom-cable-slider-slide hide"><img src="images/1_4.jpg"></div>
+            <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
         </div>
     </div>
     <a class="custom-cable-slider-prev" href="#">&lt;</a><a class="custom-cable-slider-next" href="#">&gt;</a>
@@ -115,12 +115,12 @@
                 next:'.custom-cable-slider-next',
                 prev:'.custom-cable-slider-prev',
                 margin:10,
-                //orientation:'vertical',
+                orientation:'vertical',
                 align:'center',
                 shown:1,
                 thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
-                //thumbs_orientation:'vertical',
+                thumbs_orientation:'vertical',
                 thumbs_align:'center',
                 thumbs_margin:'14%',
                 auto_thumbs:false,
