updated to add friction to dragging and allow inverse axis scrolling

--- a/v1-index.html
+++ b/v1-index.html
@@ -115,7 +115,7 @@
                 next:'.custom-cable-slider-next',
                 prev:'.custom-cable-slider-prev',
                 margin:10,
-                orientation:'vertical',
+                orientation:'horizontal',
                 align:'center',
                 shown:1,
                 thumbs_container:'.custom-cable-slider-thumbs',
