fixed ie9 basic support, added better drag handling, working on avoiding click events when dragging

--- a/v1-index.html
+++ b/v1-index.html
@@ -85,9 +85,15 @@
 
 <div class="custom-cable-slider">
     <div class="custom-cable-slider-container">
-
+        <div class="custom-cable-slider-thumbs">
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_1.jpg"></div>
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_3.jpg"></div>
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_4.jpg"></div>
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
+        </div>
         <div class="custom-cable-slider-slides">
-            <div class="custom-cable-slider-slide"><img src="images/1_1.jpg"></div>
+            <div class="custom-cable-slider-slide"><a href="#"><img src="images/1_1.jpg"></a></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_3.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_4.jpg"></div>
