final tweaks for version 0.1.4

--- a/v1-index.html
+++ b/v1-index.html
@@ -124,10 +124,11 @@
                 thumbs_align:'center',
                 thumbs_margin:'14%',
                 auto_thumbs:false,
-                auto_play:false,
+                auto_play:2000,
+                hover_pause:true,
                 responsive:{ // need a function to get responsive overrides for settings
                     1500:{ // if > 768 then apply these settings
-                        shown:1,
+                        shown:2,
                         thumbs_shown:5
                     },
                     800:{
