--- a/v1-index.html
+++ b/v1-index.html
@@ -78,6 +78,10 @@
             border-color:#ccc;
         }
 
+        .cable-slider-thumb.focus img {
+            border-color:red;
+        }
+
 
     </style>
 </head>
@@ -124,11 +128,11 @@
                 thumbs_align:'center',
                 thumbs_margin:'14%',
                 auto_thumbs:false,
-                auto_play:2000,
+                //auto_play:2000,
                 hover_pause:true,
                 responsive:{ // need a function to get responsive overrides for settings
                     1500:{ // if > 768 then apply these settings
-                        shown:2,
+                        shown:3,
                         thumbs_shown:5
                     },
                     800:{
