--- a/v1-index.html
+++ b/v1-index.html
@@ -127,7 +127,7 @@
                 orientation:'horizontal',
                 align:'center',
                 shown:1,
-                continuous:true,
+                //continuous:true,
                 thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
