--- a/v1-index.html
+++ b/v1-index.html
@@ -22,7 +22,7 @@
 
         .custom-cable-slider {
             position:relative;
-            max-width:500px;
+            max-width:800px;
             margin:0 auto;
         }
 
@@ -127,7 +127,7 @@
                 orientation:'horizontal',
                 align:'center',
                 shown:1,
-                //continuous:true,
+                continuous:true,
                 thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
@@ -136,7 +136,7 @@
                 auto_thumbs:false,
                 //auto_play:2000,
                 hover_pause:true,
-                min_clones:10,
+                //min_clones:10,
                 responsive:{ // need a function to get responsive overrides for settings
                     1500:{ // if > 768 then apply these settings
                         shown:6,
