i dont know what im doing

--- a/v1-index.html
+++ b/v1-index.html
@@ -22,7 +22,7 @@
 
         .custom-cable-slider {
             position:relative;
-            max-width:800px;
+            max-width:1800px;
             margin:0 auto;
         }
 
@@ -99,14 +99,14 @@
             <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-thumb hide"><img src="images/1_3.jpg"></div>
             <div class="custom-cable-slider-thumb hide"><img src="images/1_4.jpg"></div>
-            <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
+            <!--<div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>-->
         </div>
         <div class="custom-cable-slider-slides">
             <div class="custom-cable-slider-slide"><a href="#"><img src="images/1_1.jpg"></a></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_3.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_4.jpg"></div>
-            <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
+            <!--<div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>-->
         </div>
     </div>
     <a class="custom-cable-slider-prev" href="#">&lt;</a><a class="custom-cable-slider-next" href="#">&gt;</a>
@@ -139,7 +139,7 @@
                 //min_clones:10,
                 responsive:{ // need a function to get responsive overrides for settings
                     1500:{ // if > 768 then apply these settings
-                        shown:6,
+                        shown:5,
                         thumbs_shown:5
                     },
                     800:{
