hopefully sorted out the bugs with continuous and not enough slides... updated index configuration to highlight a bug to fix.

--- a/v1-index.html
+++ b/v1-index.html
@@ -125,9 +125,9 @@
                 prev:'.custom-cable-slider-prev',
                 margin:10,
                 orientation:'horizontal',
-                align:'center',
+                align:'right',
                 shown:1,
-                continuous:true,
+                //continuous:true,
                 thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'vertical',
