--- a/v1-index.html
+++ b/v1-index.html
@@ -99,14 +99,14 @@
             <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-thumb hide"><img src="images/1_3.jpg"></div>
             <div class="custom-cable-slider-thumb hide"><img src="images/1_4.jpg"></div>
-            <!--<div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>-->
+            <div class="custom-cable-slider-thumb hide"><img src="images/1_2.jpg"></div>
         </div>
         <div class="custom-cable-slider-slides">
             <div class="custom-cable-slider-slide"><a href="#"><img src="images/1_1.jpg"></a></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_3.jpg"></div>
             <div class="custom-cable-slider-slide hide"><img src="images/1_4.jpg"></div>
-            <!--<div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>-->
+            <div class="custom-cable-slider-slide hide"><img src="images/1_2.jpg"></div>
         </div>
     </div>
     <a class="custom-cable-slider-prev" href="#">&lt;</a><a class="custom-cable-slider-next" href="#">&gt;</a>
@@ -125,7 +125,7 @@
                 prev:'.custom-cable-slider-prev',
                 margin:10,
                 orientation:'horizontal',
-                align:'right',
+                align:'center',
                 shown:1,
                 //continuous:true,
                 thumbs_container:'.custom-cable-slider-thumbs',
@@ -138,7 +138,7 @@
                 hover_pause:true,
                 //min_clones:10,
                 responsive:{ // need a function to get responsive overrides for settings
-                    1500:{ // if > 768 then apply these settings
+                    1000:{ // if > 768 then apply these settings
                         shown:5,
                         thumbs_shown:5
                     },
