changed folder structure, added grunt and package, version 0.1.10

--- a/v1-index.html
+++ b/v1-index.html
@@ -112,8 +112,8 @@
     <a class="custom-cable-slider-prev" href="#">&lt;</a><a class="custom-cable-slider-next" href="#">&gt;</a>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<script type="text/javascript" src="js/jquery/jquery-2.2.4.min.js"></script>
-<script type="text/javascript" src="js/cable-slider.js"></script>
+<script type="text/javascript" src="dist/js/lib/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="src/js/cable-slider.js"></script>
 <script type="text/javascript">
     $(window).on('load',function(){
         setTimeout(function(){
