--- a/v1-index.html
+++ b/v1-index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link href="css/cable-slider.css" type="text/css" rel="stylesheet" />
+    <link href="dist/css/cable-slider.css" type="text/css" rel="stylesheet" />
     <style type="text/css">
         *, *:before, *:after {
             -webkit-box-sizing: border-box;
