--- a/v1-index.html
+++ b/v1-index.html
@@ -131,8 +131,8 @@
                 thumbs_container:'.custom-cable-slider-thumbs',
                 thumbs_shown:3,
                 thumbs_orientation:'horizontal',
-                thumbs_align:'center',
-                thumbs_margin:'14%',
+                thumbs_align:'left',
+                thumbs_margin:false,
                 auto_thumbs:false,
                 //auto_play:2000,
                 hover_pause:true,
@@ -140,7 +140,7 @@
                 responsive:{ // need a function to get responsive overrides for settings
                     1000:{ // if > 768 then apply these settings
                         shown:5,
-                        thumbs_shown:5
+                        thumbs_shown:30
                     },
                     800:{
                         shown:1,
